# frcrs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  notes  rust-toolchain.toml
.cargo/: config  config.toml
.github/workflows/: ci.yml
build-utils/src/: lib.rs
cargo-frcrs/: Cargo.toml
cargo-frcrs/src/: lib.rs  main.rs
cppstub/: build.gradle
cppstub/.wpilib/: wpilib_preferences.json
ctre/: Cargo.toml  build.rs
ctre-sys/: Cargo.toml
ctre-sys/src/: build.rs  lib.rs  wrapper.cpp  wrapper.hpp
ctre/src/: lib.rs
deploy/: Cargo.toml  README.md
deploy/src/: lib.rs  main.rs
example/: Cargo.toml
example/src/: main.rs
examples/: builder.rs  commands.rs  hello.rs  joystick_pov.rs  talon.rs  trapezoid_talon.rs
frc-sys/: Cargo.toml
frc-sys/src/: lib.rs
frc-wrap/: Cargo.toml
frc-wrap/src/: lib.rs
frcrs/: .gitignore  Cargo.toml
frcrs/frc-sys/: Cargo.toml  build.rs
frcrs/frc-sys/src/: main.rs
frcrs/frc-wrap/: Cargo.toml
frcrs/frc-wrap/src/: entry.rs  lib.rs
frcrs/frc-wrap/src/wpi/: driver_station.rs
frcrs/robotcode/: Cargo.toml
frcrs/robotcode/src/: lib.rs
frcrs/src/: ds.rs  joystick.rs  lib.rs
frcrs/src/interfaces/: SparkMax.rs
frcrs/src/util/: units.rs
hal-sys/: Cargo.toml  build.rs
hal-sys/src/: build.rs
javastub/: build.gradle
javastub/.wpilib/: wpilib_preferences.json
javastub/src/main/java/frc/robot/: Main.java  Reexports.java  Robot.java  Wrapper.java
javastub/vendordeps/: Phoenix5-frc2025-latest.json
maven/: Cargo.toml
maven/src/: lib.rs  package.rs
navx/: Cargo.toml  build.rs
navx-sys/: Cargo.toml
navx-sys/src/: build.rs  lib.rs  wrapper.cpp
navx/src/: lib.rs
rev-sys/: Cargo.toml
rev-sys/src/: build.rs
revlib/: Cargo.toml  build.rs
revlib/src/: error.rs  lib.rs
robotcode/: Cargo.toml
robotcode/src/: lib.rs
src/: call.rs  dio.rs  laser_can.rs  led.rs  lib.rs  limelight.rs  solenoid.rs  telemetry.rs  trajectory.rs  trapezoidal.rs
src/ctre/: cancoder.rs  canrange.rs  falcon.rs  mod.rs  pigeon.rs  srx.rs  talon.rs
src/drive/: mod.rs  swerve.rs
src/driverstation/: mod.rs
src/hal/: mod.rs
src/input/: gamepad.rs  joystick.rs  mod.rs
src/navx/: mod.rs  navx.rs
src/networktables/: mod.rs  networktable.rs  smartdashboard.rs
src/redux/: canandgyro.rs  mod.rs
src/rev/: mod.rs  pid.rs  spark.rs
src/robot/: command.rs  mod.rs  robot.rs  subsystem.rs
test-wpi/: Cargo.toml
test-wpi/src/: main.rs
