[workspace]
members = [ 
    "ctre-sys",
    "hal-sys",
    "maven",
    "navx-sys",
    "rev-sys",
]

[package]
name = "frcrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
j4rs = "0.12.0"
j4rs_derive = "0.1"
jni = { version = "0.21.1", features = ["invocation"] }
lazy_static = "1.4.0"
nalgebra = "0.32.4"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
uom = "0.35.0"
ctre-sys = {path="ctre-sys"}
navx-sys = {path="navx-sys"}
rev-sys = {path="rev-sys"}
