[package]
name = "frcrs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A robotics control framework designed to streamline the development of control systems for FRC robots"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
j4rs = "0.12.0"
j4rs_derive = "0.1"
jni = { version = "0.21.1", features = ["invocation"] }
lazy_static = "1.4.0"
nalgebra = "0.32.4"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
uom = "0.35.0"
serde_json = "1.0.107"
axum = "0.7.4"
hyper = "1.4.1"
prometheus = "0.13.4"
tokio = { version = "1.39.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
mime_guess = "2.0.5"
include_dir = "0.7.3"

[workspace]
members = ["deploy"]
