[package]
name = "frcrs"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A robotics control framework designed to streamline the development of control systems for FRC robots"
repository = "https://github.com/Team-2502/frcrs"
exclude = [
    "javastub/",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib"]

[dependencies]
bitvec = "1.0.1"
jni = { version = "0.21.1", features = ["invocation"] }
lazy_static = "1.4.0"
nalgebra = "0.32.4"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
uom = "0.35.0"
serde_json = "1.0.107"
axum = "0.7.4"
prometheus = "0.13.4"
tokio = { version = "1.39.2", features = ["full"] }
mime_guess = "2.0.5"
include_dir = "0.7.3"
async-trait = "0.1.83"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
thiserror = "2.0.11"

[workspace]
members = ["deploy"]
