[package]
name = "cargo-frcrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
glob = "0.3.1"
locate-cargo-manifest = "0.2.2"
ping = "0.5.2"
serde = { version = "1.0.197", features = ["serde_derive"] }
ssh2 = "0.9.4"
tar = "0.4.40"
toml = "0.8.11"
