[package]
name = "deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
ssh2 = "0.9.4"
tracing-subscriber = "0.3.18"
tracing = "0.1.7"
toml = "0.8.19"
serde = { version = "1.0.204", features = ["derive"] }
