[package]
name = "navx-sys"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
maven = {path = "../maven"}
bindgen = "0.69.4"
anyhow = "1.0.80"
cc = "1.0.90"
